ADD: sessions styles

--- a/css/layouts/colors.css
+++ b/css/layouts/colors.css
@@ -2,6 +2,7 @@
     --gray-1: #262626;
     --gray-2: #595959;
     --gray-3: #E8EAED;
+    --gray-4: rgba(0, 0, 0, 0.12);
     --blue: #2962FF;
     --error: #F5222D;
 }
