--- a/css/pages/contacts.css
+++ b/css/pages/contacts.css
@@ -103,3 +103,16 @@
     color: var(--gray-2);
     font-size: 18px;
 }
+
+
+.container--edit__contacts {
+    max-width: 235px;
+    height: 100vh;
+    margin: 2rem auto;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size:1rem;
+    
+}
