--- a/css/pages/contacts.css
+++ b/css/pages/contacts.css
@@ -121,3 +121,12 @@
 .contact__buttons {
     margin-top: 80%;
 }
+
+.favorite__section {
+    max-width: 375px;
+    margin: 2rem auto;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
